--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
-</head>
-<body>
-    
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>practiceJs</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav-logo">
+        <a href="#"><img src="assets/logo.png" alt="logo" /></a>
+      </div>
+      <div class="nav-links">
+      <ul >
+        <li class="link"><a href="#">About Us</a></li>
+        <li class="link"><a href="#">Servises</a></li>
+        <li class="link"><a href="#">Use Cases</a></li>
+        <li class="link"><a href="#">Pricing</a></li>
+        <li class="link"><a href="#">Blog</a></li>
+      </ul>
+      <button class="btn-request">Request a quote</button>
+    </div>
+    </nav>
+
+<header>
+    <div class="header-content">
+        <p class="title">
+            Navigating the digital landscape for success
+        </p>
+        <p class="subtitle">
+            Our digital marketing agency helps businesses grow and succeed 
+            online through a range of services including SEO,
+             PPC, social media marketing, and content creation.
+        </p>
+        <button class="btn-consultation">Book a consultation</button>
+    </div>
+    <img src="assets/Illustration.png">
+</header>
+<section id="brands">
+    <img src="assets/amazon.png" alt="brand" />
+    <img src="assets/dribble.png" alt="brand" />
+    <img src="assets/hubspot.png" alt="brand" />
+    <img src="assets/notion.png" alt="brand" />
+    <img src="assets/netflix.png" alt="brand" />
+    <img src="assets/zoom.png" alt="brand" />
+
+</section>
+
+    </body>
+    </html>
